AccessPress Twitter Feed - Fixed small css for follow button
git-svn-id: https://plugins.svn.wordpress.org/accesspress-twitter-feed/trunk@1117864 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -256,7 +256,7 @@ and open the template in the editor.
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     max-width: 100%;
 }
-.aptf-follow-btn a{
+a.aptf-follow-link{
     border-bottom: none !important;
     text-decoration: none !important;
 }
@@ -278,4 +278,7 @@ and open the template in the editor.
 }
 .aptf-seperator{
     padding: 8px;
+}
+a.aptf-follow-link:focus{
+    outline:none !important;
 }
