--- a/css/backend.css
+++ b/css/backend.css
@@ -1,13 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Mar 6, 2015, 2:37:46 PM
-    Author     : AccessPress Twitter Feed
-    */
-
     .aptf-panel{
     	background: #55ACEE;
       border-radius: 15px 15px 0 0;
@@ -182,7 +172,7 @@ input.aptf-demo-btn {
   border-radius: 5px;
 }
 input.aptf-upgrade-btn {
-  background: #C10100;
+  background: #0EB2E7;
   width: 147px;
   height: 43px;
   border-radius: 5px;
