AccessPress Twitter Feed - Released version 1.3.4
git-svn-id: https://plugins.svn.wordpress.org/accesspress-twitter-feed/trunk@1266528 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/backend.css
+++ b/css/backend.css
@@ -119,7 +119,11 @@
     line-height: 1.6;
     margin-left: 2px;
     padding-top: 5px;
-    width: calc( 100% - 26px );
+    width: calc( 100% - 12px );
+    background-color: aliceblue;
+    padding: 5px;
+    margin-top: 10px;
+    box-shadow: 0 0 2px;
  }
  .aptf-option-note a{
    padding: 0 3px;
